--- a/src/view/main_page.fxml
+++ b/src/view/main_page.fxml
@@ -13,14 +13,14 @@
    <children>
       <AnchorPane layoutX="389.0" layoutY="22.0" prefHeight="368.0" prefWidth="237.0" style="-fx-background-color: b1a09e;">
          <children>
-            <VBox alignment="TOP_CENTER" layoutX="19.0" layoutY="42.0" spacing="7.0">
+            <VBox alignment="TOP_CENTER" focusTraversable="true" layoutX="19.0" layoutY="42.0" spacing="7.0">
                <children>
-                  <TextField fx:id="odrasli" alignment="CENTER" focusTraversable="false" prefHeight="37.0" prefWidth="195.0" promptText="ODRASLI" style="-fx-background-color: ffffff;" />
-                  <TextField fx:id="djeca" alignment="CENTER" focusTraversable="false" prefHeight="37.0" prefWidth="195.0" promptText="DJECA" />
-                  <TextField fx:id="stari" alignment="CENTER" focusTraversable="false" prefHeight="37.0" prefWidth="195.0" promptText="STARI" />
-                  <TextField fx:id="kuce" alignment="CENTER" focusTraversable="false" prefHeight="37.0" prefWidth="195.0" promptText="BROJ KUĆA" />
-                  <TextField fx:id="punktovi" alignment="CENTER" focusTraversable="false" prefHeight="37.0" prefWidth="195.0" promptText="BROJ KONTROLNIH PUNKTOVA" />
-                  <TextField fx:id="ambulante" alignment="CENTER" focusTraversable="false" prefHeight="37.0" prefWidth="195.0" promptText="BROJ AMBULANTNIH VOZILA" />
+                  <TextField id="1" fx:id="odrasli" alignment="CENTER" prefHeight="37.0" prefWidth="195.0" promptText="ODRASLI" style="-fx-background-color: ffffff;" text="3" />
+                  <TextField id="2" fx:id="djeca" alignment="CENTER" prefHeight="37.0" prefWidth="195.0" promptText="DJECA" text="2" />
+                  <TextField fx:id="stari" alignment="CENTER" prefHeight="37.0" prefWidth="195.0" promptText="STARI" text="1" />
+                  <TextField fx:id="kuce" alignment="CENTER" prefHeight="37.0" prefWidth="195.0" promptText="BROJ KUĆA" text="10" />
+                  <TextField fx:id="punktovi" alignment="CENTER" prefHeight="37.0" prefWidth="195.0" promptText="BROJ KONTROLNIH PUNKTOVA" text="5" />
+                  <TextField fx:id="ambulante" alignment="CENTER" prefHeight="37.0" prefWidth="195.0" promptText="BROJ AMBULANTNIH VOZILA" text="1" />
                </children>
             </VBox>
             <Button fx:id="startButton" alignment="TOP_CENTER" layoutX="93.0" layoutY="328.0" mnemonicParsing="false" onAction="#startSimulation" text="START" />
