--- a/src/view/page.fxml
+++ b/src/view/page.fxml
@@ -65,7 +65,7 @@
                <children>
                   <HBox alignment="CENTER">
                      <children>
-                        <ImageView fx:id="sendAmbulanceImageView" fitHeight="46.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="sendAmbulanceImageView" fitHeight="46.0" fitWidth="55.0" onMouseClicked="#sendAmbulance" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@images/ambulance .png" />
                            </image>
@@ -79,7 +79,7 @@
                <children>
                   <HBox alignment="TOP_CENTER">
                      <children>
-                        <ImageView fitHeight="46.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="46.0" fitWidth="55.0" onMouseClicked="#reviewStateOfClinics" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@images/queue.png" />
                            </image>
