--- a/src/view/page.fxml
+++ b/src/view/page.fxml
@@ -121,7 +121,7 @@
                <children>
                   <HBox alignment="CENTER">
                      <children>
-                        <ImageView fitHeight="46.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="runAgainImageView" fitHeight="46.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@images/reset.png" />
                            </image>
