--- a/src/view/page.fxml
+++ b/src/view/page.fxml
@@ -97,7 +97,7 @@
                <children>
                   <HBox alignment="TOP_CENTER">
                      <children>
-                        <ImageView fitHeight="46.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="46.0" fitWidth="55.0" onMouseClicked="#showStatistic" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@images/graph-bar.png" />
                            </image>
