--- a/src/view/page.fxml
+++ b/src/view/page.fxml
@@ -3,7 +3,10 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.effect.ColorAdjust?>
+<?import javafx.scene.effect.Glow?>
 <?import javafx.scene.effect.InnerShadow?>
+<?import javafx.scene.effect.Light.Distant?>
+<?import javafx.scene.effect.Lighting?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -158,7 +161,7 @@
             </VBox>
          </children>
       </VBox>
-      <GridPane fx:id="map" GridPane.columnIndex="4" GridPane.columnSpan="2147483647" GridPane.rowIndex="3" GridPane.rowSpan="2147483647">
+      <GridPane fx:id="map" prefWidth="525.0" GridPane.columnIndex="4" GridPane.columnSpan="8" GridPane.rowIndex="3" GridPane.rowSpan="2147483647">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -214,11 +217,48 @@
             </VBox>
          </children>
       </GridPane>
-      <ScrollPane fx:id="scrollPane" prefHeight="60.0" prefWidth="106.0" GridPane.columnIndex="12" GridPane.rowIndex="1">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
-        </content>
-      </ScrollPane>
+      <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+      <GridPane GridPane.columnIndex="13" GridPane.columnSpan="2" GridPane.rowIndex="4" GridPane.rowSpan="2">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <VBox alignment="CENTER" focusTraversable="true" prefHeight="58.0" prefWidth="110.0" GridPane.columnSpan="3" GridPane.rowSpan="2">
+               <children>
+                  <ImageView fitHeight="83.0" fitWidth="57.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/face-mask.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </VBox>
+            <ScrollPane fx:id="scrollPane" prefHeight="179.0" prefWidth="104.0" style="-fx-background-color: #bac8d3;" GridPane.columnSpan="3" GridPane.rowIndex="2" GridPane.rowSpan="4">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="198.0" prefWidth="202.0" style="-fx-background-color: #eee5de;" />
+              </content>
+               <effect>
+                  <Lighting>
+                     <bumpInput>
+                        <Glow />
+                     </bumpInput>
+                     <light>
+                        <Light.Distant color="#ebf2f8" />
+                     </light>
+                  </Lighting>
+               </effect>
+            </ScrollPane>
+         </children>
+      </GridPane>
        
    </children>
 </GridPane>
