--- a/src/view/statistic.fxml
+++ b/src/view/statistic.fxml
@@ -12,9 +12,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane blendMode="SCREEN" prefHeight="700.0" prefWidth="600.0" style="-fx-background-image: url('file:C:/Users/goran/Desktop/PJ2_Projekat/src/view/images/corona_viruses.png');" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane blendMode="SCREEN" prefHeight="800.0" prefWidth="700.0" style="-fx-background-image: url('file:C:/Users/goran/Desktop/PJ2_Projekat/src/view/images/corona_viruses.png');" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <GridPane prefHeight="700.0" prefWidth="588.0">
+      <GridPane alignment="TOP_CENTER" prefHeight="800.0" prefWidth="700.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="127.20001220703125" minWidth="10.0" prefWidth="120.0" />
@@ -45,7 +45,7 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: ffffff;" GridPane.columnIndex="1" GridPane.rowIndex="18">
+            <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: ffffff;" GridPane.columnIndex="1" GridPane.rowIndex="18">
                <children>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="PREUZMI IZVJESTAJ" />
                </children>
@@ -53,35 +53,37 @@
                   <InnerShadow color="#65cfb8" />
                </effect>
             </VBox>
-            <AnchorPane prefHeight="415.0" prefWidth="360.0" style="-fx-background-color: ba9e32;" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="2" GridPane.rowSpan="14">
+            <AnchorPane prefHeight="612.0" prefWidth="434.0" style="-fx-background-color: ba9e32;" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="2" GridPane.rowSpan="14">
                <children>
-                  <GridPane alignment="CENTER" prefHeight="445.0" prefWidth="386.0" AnchorPane.topAnchor="0.0">
+                  <GridPane alignment="CENTER" prefHeight="595.0" prefWidth="386.0" AnchorPane.topAnchor="0.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <VBox layoutX="2.0" prefHeight="150.0" prefWidth="182.0" GridPane.rowIndex="3">
+                        <VBox layoutX="2.0" prefHeight="150.0" prefWidth="182.0" GridPane.rowIndex="2" GridPane.rowSpan="2">
                            <children>
-                              <PieChart fx:id="pieChartNumber" labelLineLength="10.0" prefHeight="113.0" prefWidth="200.0" title="Odnos zarazenih i oporavljenih" />
+                              <PieChart fx:id="pieChartNumber" labelLineLength="10.0" prefHeight="213.0" prefWidth="200.0" title="Odnos zarazenih i oporavljenih" />
                            </children>
                         </VBox>
-                        <VBox layoutX="1.0" prefHeight="150.0" prefWidth="183.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                        <VBox layoutX="1.0" prefHeight="184.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.rowSpan="2">
                            <children>
-                              <PieChart fx:id="pieChartType" title="Odnos zarazenih po vrsti stanovnika" />
+                              <PieChart fx:id="pieChartType" prefHeight="266.0" prefWidth="200.0" title="Odnos zarazenih po vrsti stanovnika" />
                            </children>
                         </VBox>
-                        <VBox prefHeight="150.0" prefWidth="182.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                        <VBox prefHeight="150.0" prefWidth="182.0" GridPane.columnIndex="1" GridPane.rowIndex="4" GridPane.rowSpan="2">
                            <children>
-                              <PieChart fx:id="pieChartGender" labelLineLength="10.0" title="Odnos zarazenih po polu" />
+                              <PieChart fx:id="pieChartGender" labelLineLength="10.0" prefHeight="136.0" prefWidth="200.0" title="Odnos zarazenih po polu" />
                            </children>
                         </VBox>
                      </children>
