--- a/src/view/statistics.fxml
+++ b/src/view/statistics.fxml
@@ -10,10 +10,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="700.0" prefWidth="600.0" style="-fx-background-image: url('file:C:/Users/goran/Desktop/PJ2_Projekat/src/view/images/corona_viruses.png');" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="800.0" prefWidth="700.0" style="-fx-background-image: url('file:C:/Users/goran/Desktop/PJ2_Projekat/src/view/images/corona_viruses.png');" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <GridPane prefHeight="700.0" prefWidth="600.0">
+      <GridPane prefHeight="800.0" prefWidth="700.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -40,30 +39,34 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <GridPane prefHeight="494.0" prefWidth="520.0" style="-fx-background-color: #ba9e32;" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="2" GridPane.rowSpan="10">
+            <GridPane prefHeight="494.0" prefWidth="520.0" style="-fx-background-color: #ba9e32;" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="2" GridPane.rowSpan="8">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+                  <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.rowSpan="2">
                      <children>
-                        <PieChart fx:id="pieChartNumber" prefHeight="146.0" prefWidth="173.0" title="Odnos broja zarazenih i&#10;       oporavljenih" />
+                        <PieChart fx:id="pieChartNumber" prefHeight="260.0" prefWidth="250.0" title="Odnos broja zarazenih i&#10;       oporavljenih" />
                      </children>
                   </VBox>
-                  <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                  <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.rowSpan="2">
                      <children>
-                        <PieChart fx:id="pieChartType" legendSide="TOP" prefHeight="123.0" prefWidth="130.0" title="Odnos broja zarazenih &#10;   po vrsti stanovnika" />
+                        <PieChart fx:id="pieChartType" legendSide="TOP" prefHeight="219.0" prefWidth="250.0" title="Odnos broja zarazenih &#10;   po vrsti stanovnika" />
                      </children>
                   </VBox>
-                  <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="2">
+                  <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="2" GridPane.rowSpan="2">
                      <children>
-                        <PieChart fx:id="pieChartGender" prefHeight="132.0" prefWidth="112.0" title="Odnos broja zarazenih &#10;              po polu" />
+                        <PieChart fx:id="pieChartGender" prefHeight="228.0" prefWidth="250.0" title="Odnos broja zarazenih &#10;              po polu" />
                      </children>
                   </VBox>
                </children>
